# Builder

./: .gitignore  CMakeLists.txt  README.md  structure.xmind
include/: MyGlWidget.h  Window.h  glLine.h
res/: opgl.qrc  opgl.ui
src/: MyGlWidget.cpp  Window.cpp  glLine.cpp  main.cpp
